--- a/index.html
+++ b/index.html
@@ -897,9 +897,11 @@ Chất lượng, không lệch màu, gửi trong 3-5 ngày.
 Giữ trang phục cẩn thận.  
 💬 Ứng tuyển: Nhắn tin để nhận sản phẩm ngay!</p>
                         <div class="image-gallery">
-                            <img src="https://imgur.com/2Ew6BpP.jpg" alt="Tuyển mẫu 1">
-                            <img src="https://imgur.com/ZaUZm4r.jpg" alt="Tuyển mẫu 2">
-                            <img src="https://imgur.com/gY9PqdC.jpg" alt="Tuyển mẫu 3">
+                            <img src="https://imgur.com/AQBiUha.jpg" alt="Tuyển mẫu 1">
+                            <img src="https://imgur.com/d3v6bni.jpg" alt="Tuyển mẫu 2">
+                            <img src="https://imgur.com/KyoFKsV.jpg" alt="Tuyển mẫu 3">
+                            <img src="https://imgur.com/H2r69hs.jpg" alt="Tuyển mẫu 4">
+                            <img src="https://imgur.com/KyoFKsV.jpg" alt="Tuyển mẫu 5">
                         </div>
                         <div class="like-info">
                             <img src="https://via.placeholder.com/18?text=Like" alt="Like">
@@ -977,7 +979,12 @@ Giữ trang phục cẩn thận.
 Cơ hội tham gia chụp ảnh concept độc đáo!  
 📩 Inbox ngay để biết thêm chi tiết!</p>
                         <div class="image-gallery">
-                            <img src="https://imgur.com/TRfSXan.jpg" alt="Tuyển mẫu mới">
+                            <img src="https://imgur.com/bpwB1Mw.jpg" alt="Tuyển mẫu mới">
+                            <img src="https://imgur.com/nzhClNJ.jpg" alt="Tuyển mẫu mới">
+                            <img src="https://imgur.com/KjwTWnb.jpg" alt="Tuyển mẫu mới">
+                            <img src="https://imgur.com/9GX1A7M.jpg" alt="Tuyển mẫu mới">
+                            <img src="https://imgur.com/fseaGck.jpg" alt="Tuyển mẫu mới">
+                            <img src="https://imgur.com/Qlja8xQ.jpg" alt="Tuyển mẫu mới">
                         </div>
                         <div class="like-info">
                             <img src="https://via.placeholder.com/18?text=Like" alt="Like">
