--- a/index.html
+++ b/index.html
@@ -790,8 +790,10 @@ Vibe nữ tính, thanh lịch, thần thái cuốn hút.
 Giữ trang phục như mới.  
 💌 Ứng tuyển: Inbox ngay để nhận sản phẩm mẫu!</p>
                         <div class="image-gallery">
-                            <img src="https://imgur.com/6O5HQYq.jpg" alt="Lookbook 1">
-                            <img src="https://imgur.com/ar8Iuym.jpg" alt="Lookbook 2">
+                            <img src="https://imgur.com/GDGSiBJ.jpg" alt="Lookbook 1">
+                            <img src="https://imgur.com/kMfbbEG.jpg" alt="Lookbook 2">
+                             <img src="https://imgur.com/kMfbbEG.jpg" alt="Lookbook 2">
+                             <img src="https://imgur.com/BEuyCv3.jpg" alt="Lookbook 2">
                             <div class="more-images">
                                 <img src="https://imgur.com/ar8Iuym.jpg" alt="Lookbook 3">
                             </div>
@@ -846,9 +848,10 @@ Nữ tính, duyên dáng, biết cách lên hình.
 Trả lại đồ sạch sẽ.  
 📩 Ứng tuyển: Inbox để xem mẫu sản phẩm và bắt đầu!</p>
                         <div class="image-gallery">
-                            <img src="https://imgur.com/Q1AXrC8.jpg" alt="Livestream 1">
-                            <img src="https://imgur.com/ULneoG4.jpg" alt="Livestream 2">
-                            <img src="https://imgur.com/vOnAYFQ.jpg" alt="Livestream 3">
+                            <img src="https://imgur.com/MLMjl3Y.jpg" alt="Livestream 1">
+                            <img src="https://imgur.com/Smaexod.jpg" alt="Livestream 2">
+                            <img src="https://imgur.com/wgWVjG5.jpg" alt="Livestream 3">
+                            <img src="https://imgur.com/NZFXea4.jpg" alt="Livestream 3">
                         </div>
                         <div class="like-info">
                             <img src="https://via.placeholder.com/18?text=Like" alt="Like">
@@ -901,7 +904,6 @@ Giữ trang phục cẩn thận.
                             <img src="https://imgur.com/d3v6bni.jpg" alt="Tuyển mẫu 2">
                             <img src="https://imgur.com/KyoFKsV.jpg" alt="Tuyển mẫu 3">
                             <img src="https://imgur.com/H2r69hs.jpg" alt="Tuyển mẫu 4">
-                            <img src="https://imgur.com/KyoFKsV.jpg" alt="Tuyển mẫu 5">
                         </div>
                         <div class="like-info">
                             <img src="https://via.placeholder.com/18?text=Like" alt="Like">
@@ -982,8 +984,6 @@ Cơ hội tham gia chụp ảnh concept độc đáo!
                             <img src="https://imgur.com/bpwB1Mw.jpg" alt="Tuyển mẫu mới">
                             <img src="https://imgur.com/nzhClNJ.jpg" alt="Tuyển mẫu mới">
                             <img src="https://imgur.com/KjwTWnb.jpg" alt="Tuyển mẫu mới">
-                            <img src="https://imgur.com/9GX1A7M.jpg" alt="Tuyển mẫu mới">
-                            <img src="https://imgur.com/fseaGck.jpg" alt="Tuyển mẫu mới">
                             <img src="https://imgur.com/Qlja8xQ.jpg" alt="Tuyển mẫu mới">
                         </div>
                         <div class="like-info">
@@ -1012,9 +1012,10 @@ Cơ hội tham gia chụp ảnh concept độc đáo!
 
                 <div id="reels-tab" class="reels-section tab-content">
                     <p><strong>Reels</strong></p>
-                    <p>Reel 1: <a href="#">https://meimeistudio.vn/reel1</a></p>
-                    <p>Reel 2: <a href="#">https://meimeistudio.vn/reel2</a></p>
-                    <p>Reel 3: <a href="#">https://meimeistudio.vn/reel3</a></p>
+                    <p>Reel 1: <a href="#">https://imgur.com/bASHqqu/reel1</a></p>
+                    <p>Reel 2: <a href="#">https://imgur.com/Fw9t5Ih/reel2</a></p>
+                    <p>Reel 3: <a href="#">https://imgur.com/zCaD2w9/reel3</a></p>
+                    <p>Reel 4: <a href="#">https://imgur.com/6WGS0H9/reel3</a></p>
                 </div>
 
                 <div id="likes-tab" class="likes-section tab-content">
