--- a/index.html
+++ b/index.html
@@ -900,10 +900,10 @@ Chất lượng, không lệch màu, gửi trong 3-5 ngày.
 Giữ trang phục cẩn thận.  
 💬 Ứng tuyển: Nhắn tin để nhận sản phẩm ngay!</p>
                         <div class="image-gallery">
-                            <img src="https://imgur.com/AQBiUha.jpg" alt="Tuyển mẫu 1">
-                            <img src="https://imgur.com/d3v6bni.jpg" alt="Tuyển mẫu 2">
-                            <img src="https://imgur.com/KyoFKsV.jpg" alt="Tuyển mẫu 3">
-                            <img src="https://imgur.com/H2r69hs.jpg" alt="Tuyển mẫu 4">
+                            <img src="https://imgur.com/7eRH4Fr.jpg" alt="Tuyển mẫu 1">
+                            <img src="https://imgur.com/mj7UTEK.jpg" alt="Tuyển mẫu 2">
+                            <img src="https://imgur.com/x7Z7Evf.jpg" alt="Tuyển mẫu 3">
+                            <img src="https://imgur.com/dMpcnkS.jpg" alt="Tuyển mẫu 4">
                         </div>
                         <div class="like-info">
                             <img src="https://via.placeholder.com/18?text=Like" alt="Like">
