--- a/index.html
+++ b/index.html
@@ -941,7 +941,12 @@ Giữ trang phục cẩn thận.
                         </div>
                         <p>Cảm ơn chị H. đã gửi feedback, ai muốn đăng ký mẫu ảnh hay chụp lookbook ib mình nha!</p>
                         <div class="image-gallery">
-                            <img src="https://imgur.com/MDaWHna.jpg" alt="Feedback mẫu ảnh">
+                            <img src="https://imgur.com/PFw6ohI.jpg" alt="Feedback mẫu ảnh">
+                             <img src="https://imgur.com/JvsEaqS.jpg" alt="Feedback mẫu ảnh">
+                             <img src="https://imgur.com/3i4GTMx.jpg" alt="Feedback mẫu ảnh">
+                             <img src="https://imgur.com/qmAr0ky.jpg" alt="Feedback mẫu ảnh">
+                             <img src="https://imgur.com/wIzKHmz.jpg" alt="Feedback mẫu ảnh">
+                             <img src="https://imgur.com/Soh6BgS.jpg" alt="Feedback mẫu ảnh">
                         </div>
                         <div class="like-info">
                             <img src="https://via.placeholder.com/18?text=Like" alt="Like">
