--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@ Giữ trang phục cẩn thận.
                             <img src="https://imgur.com/7eRH4Fr.jpg" alt="Tuyển mẫu 1">
                             <img src="https://imgur.com/mj7UTEK.jpg" alt="Tuyển mẫu 2">
                             <img src="https://imgur.com/x7Z7Evf.jpg" alt="Tuyển mẫu 3">
-                            <img src="https://imgur.com/dMpcnkS.jpg" alt="Tuyển mẫu 4">
+                            <img src="https://imgur.com/GT3OXZP.jpg" alt="Tuyển mẫu 4">
                         </div>
                         <div class="like-info">
                             <img src="https://via.placeholder.com/18?text=Like" alt="Like">
