--- a/facebookdangnhaphoacdangky.html/index.html
+++ b/facebookdangnhaphoacdangky.html/index.html
@@ -737,7 +737,7 @@
                 </div>
                 <div class="stats">893k lượt thích • 648k người theo dõi</div>
                 <div class="description">
-                    Tuyển mẫu ảnh Concept theo sở thích, quay LOOKBOOK, mẫu FEEDBACK và mẫu LIVESTREAM bán hàng.
+                   Nhắn Mai nhiều mẫu concep đang hót lắm nha mấy bà ♥️
                 </div>
             </div>
         </div>
